--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Brenda NordHaus - {% block title %}{% endblock %}</title>
+    <title>Tabacaria - {% block title %}{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}">
@@ -14,7 +14,7 @@
         <div class="container">
             <a class="navbar-brand" href="{{ url_for('dashboard.dashboard') }}">
                 <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo" width="40" height="40" class="d-inline-block align-top">
-                Brenda NordHaus
+                Tabacaria
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,12 @@
                         <a class="nav-link" href="{{ url_for('auth.login') }}"><i class="fas fa-sign-in-alt"></i> Login</a>
                     </li>
                     {% endif %}
+
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ url_for('dashboard.adicionar_vendedor') }}">
+                            <i class="fas fa-user-plus"></i> Adicionar Vendedor
+                        </a>
+                    </li>
                 </ul>
             </div>
         </div>
