--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <style>
+        .smoke-test {
+            text-shadow: 0 0 10px red !important;
+        }
+        </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tabacaria - {% block title %}{% endblock %}</title>
